--- a/main.html
+++ b/main.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        :root {
+            background-color: rgb(135, 206, 235);
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        p:first-child {
+            color: white;
+            background-color: black;
+        }
+
+        p:nth-child(2) {
+            /* Standard text color (default) */
+        }
+
+        p:last-child {
+            color: red;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            background-color: gray;
+            width: 50%;
+            padding: 10px;
+        }
+
+        li:nth-child(odd) {
+            background-color: white;
+        }
+
+        li:first-child,
+        li:last-child {
+            font-size: 22px;
+        }
+
+        li:nth-child(3):nth-last-child(3) {
+            background-color: pink;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <article>
+        <p>This is the first paragraph with white text on a black background.</p>
+        <p>This is the second paragraph with standard text color.</p>
+        <p>This is the third paragraph with red text.</p>
+    </article>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul>
 </body>
-
 </html>
